# lersha_credit_api

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Caddyfile  Introduction.py  Makefile  README.md  app.py  conftest.py  db_init.py  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  infer.py  pyproject.toml  requirements.txt
.agent/rules/: specify-rules.md
.agent/skills/speckit-analyze/: SKILL.md
.agent/skills/speckit-clarify/: SKILL.md
.agent/skills/speckit-plan/: SKILL.md
.agent/skills/speckit-specify/: SKILL.md
.github/workflows/: ci.yml
.specify/: init-options.json
.specify/memory/: constitution.md
backend/: Dockerfile  main.py  worker.py
backend/alembic/: env.py
backend/api/: dependencies.py  middleware.py  schemas.py
backend/chat/: rag_engine.py  rag_service.py
backend/cli/: __init__.py  _client.py  explain.py  health.py  predict.py  results.py
backend/config/: config.py  hyperparams.yaml
backend/core/: feature_engineering.py  infer_utils.py  pipeline.py  preprocessing.py
backend/logger/: logger.py
backend/models/: 34_feature_columns.pkl  36_label_classes.pkl  random_forest_36_credit_score.pkl  xgboost_34_credit_score.pkl
backend/prompts/: v1.yaml  v2.yaml
backend/scripts/: db_init.py  populate_chroma.py  populate_pgvector.py  register_model.py
backend/services/: db_model.py  db_utils.py  schema.py
backend/tests/: conftest.py
backup/: IMPLEMENTATION_REPORT.md
chat/: rag_engine.py
config/: config.py
data/: testing_dataset_final.csv
docs/: ARCHITECTURE.md  REFACTOR_PLAN.md  RUNBOOK.md  UPGRADE_PLAN.md
frontend/: .env.local.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/components/: ConfidenceGauge.tsx  DashboardPanel.tsx  DecisionBadge.tsx  EvaluationCard.tsx  ExplanationPanel.tsx  FarmerAvatar.tsx  FarmerDetailDrawer.tsx  FarmersPanel.tsx  FeatureContribChart.tsx  JobProgressBanner.tsx  JobStatusBadge.tsx  NavBar.tsx  PredictPanel.tsx  PredictionForm.tsx  PredictionModal.tsx  ProbabilityBreakdown.tsx  Providers.tsx
frontend/lib/: api.ts  queries.ts  server-api.ts  stores.ts  types.ts
logic/: smote_updated.py
models/: 36_feature_columns.pkl  catboost_34_credit_score.pkl  catboost_36_credit_score.pkl  random_forest_34_credit_score.pkl  xgboost_36_credit_score.pkl
pages/: Dashboard.py  New_Prediction.py
prompts/: prompts.yaml
services/: db_model.py  db_utils.py  schema.py
specs/001-monorepo-refactor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fastapi-backend-http-wire/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-tests-docker-cicd/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-harden-app-security/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-infra-prod-hardening/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-migrate-chroma-pgvector/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-rag-service-hardening/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-nextjs-frontend-migration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: infer_utils.py  inference_pipeline.py  logger.py  utils.py
ui/: Dockerfile  Introduction.py
ui/pages/: Dashboard.py  New_Prediction.py
ui/utils/: api_client.py  eda.py  plots.py
utils/: eda.py  plots.py
(+87 files in other folders)
