[project]
name = "credit_api"
version = "0.1.0"
description = ""
authors = [
    {name = "Tadesse Abateneh",email = "tedoaba@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.14"
package-mode=false

dependencies = [
    "psycopg2 (>=2.9.11,<3.0.0)",
    "fastapi (>=0.121.2,<0.122.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "catboost (>=1.2.8,<2.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "xgboost (>=3.1.1,<4.0.0)",
    "mlflow (>=3.6.0,<4.0.0)",
    "shap (>=0.50.0,<0.51.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "make (>=0.1.6.post2,<0.2.0)",
    "dspy (>=3.0.4,<4.0.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
    "langchain (>=1.0.8,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "imblearn (>=0.0,<0.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1.0"

