[project]
name = "lersha-credit-api"
version = "0.1.0"
description = "Agricultural credit scoring for Ethiopian smallholder farmers"
authors = [
    {name = "Tadesse Abateneh", email = "tedoaba@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.14"

dependencies = [
    "psycopg2>=2.9.11,<3.0.0",
    "fastapi>=0.121.2,<0.122.0",
    "uvicorn>=0.30.0",
    "lightgbm>=4.5.0",
    "catboost>=1.2.5",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "mlflow>=2.10.0",
    "shap>=0.46.0,<0.51.0",
    "joblib>=1.3.0",
    "seaborn>=0.13.0",
    "dspy>=2.0.0",
    "google-genai>=1.0.0",
    "langchain>=0.2.0",
    "openpyxl>=3.1.0",
    "imbalanced-learn>=0.12.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=2.7.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "tenacity>=8.2.0",
    "streamlit>=1.35.0",
    "requests>=2.31.0",
    "slowapi>=0.1.9",
    # ── Phase 8 hardening additions ───────────────────────────────────────
    "alembic>=1.13",
    "celery>=5.3",
    "redis>=5.0",
    "python-json-logger>=2.0",
    "gunicorn>=21.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pytest-mock>=3.14",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

# ─── Ruff (replaces flake8 + isort + black) ───────────────────────────────────
[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"backend/tests/*" = ["S101", "F401"]

# ─── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
asyncio_mode = "auto"

# ─── Coverage ─────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["backend"]
omit = ["backend/tests/*", "backend/scripts/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80

# ─── MyPy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
check_untyped_defs = true
exclude = ["backend/tests", "backend/scripts"]
